--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -58,3 +58,11 @@ ol li a:hover {
   text-decoration: none;
 }
 
+
+.formContainer {
+  border: 2px solid var(--primary);
+  border-radius: 15px;
+  padding: 3rem;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(23,162,184,0); 
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(23,162,184,0);
+}
